feat: major v0.2.0 release with optimizations and documentation
- Added comprehensive optimization system (70-80% faster)
- Implemented pre-generated keys for better performance
- Added statistical analysis with 100 iterations
- Created modular architecture (error, constants, keys, measurement)
- Enhanced CLI with --help, --version, comparison modes
- Added Falcon-512 benchmarks to Criterion suite
- Created LICENSE (MIT)
- Created CONTRIBUTING.md with comprehensive guidelines
- Updated README with complete benchmark results
- Updated Cargo.toml with package metadata
- Removed deprecated CHANGELOG.md

Performance improvements:
- Total benchmark time: 15-20s → 0.49s
- Key generation separated from measurements
- Statistical analysis with mean, min, max, stddev

New modules:
- src/error.rs: Error handling types
- src/constants.rs: Configuration constants
- src/keys.rs: Pre-generated benchmark keys
- src/measurement.rs: Statistical benchmarking

Documentation:
- Complete contribution guide (14K)
- MIT License
- Enhanced README (17K)
- Quick reference guide

Ready for open source release!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "crypto_benchmark"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
+authors = ["Crypto Benchmark Contributors"]
+description = "High-performance benchmarking tool for classical and post-quantum cryptographic algorithms"
+readme = "README.md"
+repository = "https://github.com/analisaperlengkapan/crypto_benchmark"
+license = "MIT"
+keywords = ["cryptography", "benchmark", "post-quantum", "pqc", "performance"]
+categories = ["cryptography", "development-tools::profiling"]
 
 [dependencies]
 rsa = { version = "0.9", features = ["sha2", "pem"] }
